--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,9 @@ versionName = "2.8.2-alpha02"
 versionCode = "138"
 
 jvmTarget = "17"
-compose-compiler = "1.5.13"
+compose-compiler = "1.5.14"
 
-imageToolboxLibs = "1.5.0"
+imageToolboxLibs = "1.5.1"
 
 avifCoderCoil = "1.7.5"
 avifCoder = "1.7.5"
@@ -18,7 +18,7 @@ jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-alpha08"
+composeVersion = "1.7.0-beta01"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -30,25 +30,25 @@ reimagined = "1.5.0"
 shadowsPlus = "1.0.4"
 exifinterface = "1.3.7"
 firebaseAnalyticsKtx = "22.0.0"
-firebaseCrashlyticsGradle = "2.9.9"
+firebaseCrashlyticsGradle = "3.0.1"
 google-segmentationSelfie = "16.0.0-beta5"
 detekt = "1.23.6"
 detektCompose = "0.3.20"
 
-kotlin = "1.9.23"
+kotlin = "1.9.24"
 agp = "8.4.0"
 hilt = "2.51.1"
 gms = "4.4.1"
 
 coil = "2.6.0"
-appCompat = "1.7.0-beta01"
+appCompat = "1.7.0-rc01"
 androidxCore = "1.13.1"
-androidxLifecycle = "2.8.0-rc01"
+androidxLifecycle = "2.8.0"
 desugaring = "2.0.4"
 activityCompose = "1.9.0"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.1.0"
-material3 = "1.3.0-alpha06"
+material3 = "1.3.0-beta01"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha01"
@@ -59,7 +59,7 @@ ksp = "1.9.23-1.0.20"
 androidx-test-ext-junit = "1.1.5"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.0-alpha04"
+androidxMacroBenchmark = "1.3.0-alpha05"
 
 material = "1.13.0-alpha02"
 
