--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ imageToolboxLibs = "1.5.1"
 
 avifCoderCoil = "1.7.5"
 avifCoder = "1.7.5"
-aire = "0.9.90"
+aire = "0.9.92"
 jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
@@ -63,11 +63,11 @@ androidxMacroBenchmark = "1.3.0-alpha05"
 
 material = "1.13.0-alpha02"
 
-documentscanner = "1.3.7"
+documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
 
 [libraries]
-documentscanner = { module = "com.github.T8RIN:android-document-scanner", version.ref = "documentscanner" }
+documentscanner = { module = "com.github.T8RIN:DocumentScanner", version.ref = "documentScanner" }
 imageToolboxLibs = { module = "com.github.T8RIN:ImageToolboxLibs", version.ref = "imageToolboxLibs" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
