--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -66,6 +66,7 @@ material = "1.13.0-alpha02"
 
 documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
+zxingAndroidEmbedded = "4.3.0"
 
 [libraries]
 documentscanner = { module = "com.github.T8RIN:DocumentScanner", version.ref = "documentScanner" }
@@ -131,6 +132,7 @@ agp-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 detekt-compose = { module = "io.nlopez.compose.rules:detekt", version.ref = "detektCompose" }
+zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 
 [plugins]
 image-toolbox-library = { id = "image.toolbox.library", version = "unspecified" }
