--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -68,8 +68,10 @@ material = "1.13.0-alpha02"
 documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
 zxingAndroidEmbedded = "4.3.0"
+capturable = "2.1.0"
 
 [libraries]
+capturable = { module = "dev.shreyaspatil:capturable", version.ref = "capturable" }
 documentscanner = { module = "com.github.T8RIN:DocumentScanner", version.ref = "documentScanner" }
 imageToolboxLibs = { module = "com.github.T8RIN:ImageToolboxLibs", version.ref = "imageToolboxLibs" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
