--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ versionCode = "139"
 jvmTarget = "17"
 compose-compiler = "1.5.14"
 
-imageToolboxLibs = "1.5.4"
+imageToolboxLibs = "1.5.5"
 
 avifCoderCoil = "1.7.5"
 avifCoder = "1.7.5"
@@ -17,7 +17,6 @@ aire = "0.9.99"
 jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
-quickieBundled = "1.10.0"
 tesseract = "4.7.0"
 composeVersion = "1.7.0-beta01"
 androidx-datastorePreferencesAndroid = "1.1.1"
@@ -62,6 +61,8 @@ androidx-test-ext-junit = "1.1.5"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.3.0-alpha05"
+quickieBundled = "1.10.0"
+quickieFoss = "1.10.7"
 
 material = "1.13.0-alpha02"
 
@@ -73,6 +74,7 @@ capturable = "2.1.0"
 [libraries]
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
 quickie-bundled = { module = "io.github.g00fy2.quickie:quickie-bundled", version.ref = "quickieBundled" }
+quickie-foss = { module = "com.github.T8RIN:quickie-foss", version.ref = "quickieFoss" }
 zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 capturable = { module = "dev.shreyaspatil:capturable", version.ref = "capturable" }
 documentscanner = { module = "com.github.T8RIN:DocumentScanner", version.ref = "documentScanner" }
