--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-beta01"
+composeVersion = "1.7.0-beta02"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -42,14 +42,14 @@ hilt = "2.51.1"
 gms = "4.4.1"
 
 coil = "2.6.0"
-appCompat = "1.7.0-rc01"
+appCompat = "1.7.0"
 androidxCore = "1.13.1"
-androidxLifecycle = "2.8.0"
+androidxLifecycle = "2.8.1"
 desugaring = "2.0.4"
 activityCompose = "1.9.0"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.1.0"
-material3 = "1.3.0-beta01"
+material3 = "1.3.0-beta02"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha01"
