--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "34"
 androidCompileSdk = "34"
 
-versionName = "2.8.2-alpha03"
-versionCode = "139"
+versionName = "2.8.2-beta01"
+versionCode = "140"
 
 jvmTarget = "17"
 compose-compiler = "1.5.14"
@@ -13,7 +13,7 @@ imageToolboxLibs = "1.5.6"
 
 avifCoderCoil = "1.7.5"
 avifCoder = "1.7.5"
-aire = "0.10.1"
+aire = "0.11.0"
 jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
