--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ versionCode = "140"
 jvmTarget = "17"
 compose-compiler = "1.5.14"
 
-imageToolboxLibs = "1.6.2"
+imageToolboxLibs = "1.6.31"
 
 avifCoderCoil = "1.7.5"
 avifCoder = "1.7.5"
@@ -18,7 +18,7 @@ jxlCoderCoil = "2.2.0"
 jxlCoder = "2.2.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-beta02"
+composeVersion = "1.7.0-beta03"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -44,12 +44,12 @@ gms = "4.4.2"
 coil = "2.6.0"
 appCompat = "1.7.0"
 androidxCore = "1.13.1"
-androidxLifecycle = "2.8.1"
+androidxLifecycle = "2.8.2"
 desugaring = "2.0.4"
 activityCompose = "1.9.0"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.1.0"
-material3 = "1.3.0-beta02"
+material3 = "1.3.0-beta03"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha01"
@@ -60,7 +60,7 @@ ksp = "1.9.24-1.0.20"
 androidx-test-ext-junit = "1.1.5"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.0-alpha05"
+androidxMacroBenchmark = "1.3.0-beta01"
 quickieBundled = "1.10.0"
 quickieFoss = "1.11.0"
 
