--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "34"
 androidCompileSdk = "34"
 
-versionName = "2.8.2-beta02"
-versionCode = "141"
+versionName = "2.9.0-rc01"
+versionCode = "142"
 
 jvmTarget = "17"
 compose-compiler = "1.5.14"
