--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:minSdkVersion="21"
         tools:overrideLibrary="com.github.awxkee.avifcodercoil, com.github.awxkee.avifcoder, com.google.mlkit.vision.segmentation.subject" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -192,10 +198,10 @@
         <service
             android:name=".feature.quick_tiles.ColorPickerTile"
             android:exported="true"
-            android:process=":remote"
             android:icon="@drawable/outline_colorize_24"
             android:label="@string/pick_color"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
@@ -204,10 +210,10 @@
         <service
             android:name=".feature.quick_tiles.ImageToolboxTile"
             android:exported="true"
-            android:process=":remote"
             android:icon="@drawable/ic_launcher_monochrome_24"
             android:label="@string/app_name"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
@@ -216,10 +222,10 @@
         <service
             android:name=".feature.quick_tiles.EditScreenshotTile"
             android:exported="true"
-            android:process=":remote"
             android:icon="@drawable/outline_app_registration_24"
             android:label="@string/edit_screenshot"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
@@ -228,10 +234,10 @@
         <service
             android:name=".feature.quick_tiles.TakeScreenshotTile"
             android:exported="true"
-            android:process=":remote"
             android:icon="@drawable/outline_screenshot_24"
             android:label="@string/screenshot"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
@@ -242,15 +248,15 @@
             android:theme="@style/TransparentActivity" />
 
         <service
-            android:process=":remote"
             android:name=".feature.quick_tiles.ScreenshotService"
-            android:foregroundServiceType="mediaProjection" />
+            android:foregroundServiceType="mediaProjection"
+            android:process=":remote" />
 
         <activity
             android:name=".feature.media_picker.presentation.MediaPickerActivity"
+            android:enabled="@bool/at_least_26"
             android:exported="true"
             android:launchMode="singleTask"
-            android:enabled="@bool/at_least_26"
             android:theme="@style/Theme.ImageResizer">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.PICK" />
