--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,8 @@ versionCode = "145"
 jvmTarget = "17"
 compose-compiler = "1.5.14"
 
-imageToolboxLibs = "2.1.3"
+imageToolboxLibs = "2.1.4"
+trickle = "1.0.0"
 
 avifCoder = "1.7.5"
 aire = "0.13.4"
@@ -70,6 +71,7 @@ zxingAndroidEmbedded = "4.3.0"
 capturable = "2.1.0"
 
 [libraries]
+trickle = { module = "com.github.T8RIN:Trickle", version.ref = "trickle" }
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
 quickie-bundled = { module = "io.github.g00fy2.quickie:quickie-bundled", version.ref = "quickieBundled" }
 quickie-foss = { module = "com.github.T8RIN:quickie-foss", version.ref = "quickieFoss" }
