--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "34"
 androidCompileSdk = "34"
 
-versionName = "2.9.1-alpha03"
-versionCode = "147"
+versionName = "2.9.1-beta01"
+versionCode = "148"
 
 jvmTarget = "17"
 compose-compiler = "1.5.14"
