--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,9 @@ versionName = "2.9.1-beta01"
 versionCode = "148"
 
 jvmTarget = "17"
-compose-compiler = "1.5.14"
+compose-compiler = "1.5.15"
 
-imageToolboxLibs = "2.1.7"
+imageToolboxLibs = "2.2.0"
 trickle = "1.1.2"
 
 avifCoder = "1.8.0"
@@ -17,7 +17,7 @@ aire = "0.13.12"
 jxlCoder = "2.3.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-beta06"
+composeVersion = "1.7.0-beta07"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -30,12 +30,12 @@ shadowsPlus = "1.0.4"
 exifinterface = "1.3.7"
 firebaseAnalyticsKtx = "22.0.2"
 firebaseCrashlyticsGradle = "3.0.2"
-google-segmentationSelfie = "16.0.0-beta5"
+google-segmentationSelfie = "16.0.0-beta6"
 google-subjectSegmentation = "16.0.0-beta1"
 detekt = "1.23.6"
-detektCompose = "0.4.9"
+detektCompose = "0.4.10"
 
-kotlin = "1.9.24"
+kotlin = "1.9.25"
 agp = "8.5.1"
 hilt = "2.52"
 gms = "4.4.2"
@@ -59,7 +59,7 @@ ksp = "1.9.24-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.0-beta02"
+androidxMacroBenchmark = "1.3.0-rc01"
 quickieBundled = "1.10.0"
 quickieFoss = "1.11.0"
 
