--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -64,6 +64,7 @@ quickieBundled = "1.10.0"
 quickieFoss = "1.11.0"
 
 material = "1.13.0-alpha05"
+jsoup = "1.14.3"
 
 documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
@@ -72,6 +73,7 @@ capturable = "2.1.0"
 
 [libraries]
 trickle = { module = "com.github.T8RIN:Trickle", version.ref = "trickle" }
+jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
 quickie-bundled = { module = "io.github.g00fy2.quickie:quickie-bundled", version.ref = "quickieBundled" }
 quickie-foss = { module = "com.github.T8RIN:quickie-foss", version.ref = "quickieFoss" }
