--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ versionCode = "149"
 jvmTarget = "17"
 compose-compiler = "1.5.15"
 
-imageToolboxLibs = "2.2.0"
+imageToolboxLibs = "2.2.2"
 trickle = "1.1.2"
 
 avifCoder = "1.8.0"
@@ -17,7 +17,7 @@ aire = "0.13.12"
 jxlCoder = "2.3.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-beta07"
+composeVersion = "1.7.0-rc01"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -48,7 +48,7 @@ desugaring = "2.0.4"
 activityCompose = "1.9.1"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.2.0"
-material3 = "1.3.0-beta05"
+material3 = "1.3.0-rc01"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha01"
@@ -59,7 +59,7 @@ ksp = "1.9.24-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.0-rc01"
+androidxMacroBenchmark = "1.3.0"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha05"
