--- a/feature/quick-tiles/src/main/AndroidManifest.xml
+++ b/feature/quick-tiles/src/main/AndroidManifest.xml
@@ -15,6 +15,4 @@
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
   -->
 
-<manifest>
-
-</manifest>
+<manifest />
