--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "34"
 androidCompileSdk = "34"
 
-versionName = "2.9.1-rc02"
-versionCode = "151"
+versionName = "3.0.0"
+versionCode = "152"
 
 jvmTarget = "17"
 compose-compiler = "1.5.15"
@@ -105,6 +105,7 @@ toolbox-tiffDecoder = { module = "com.github.T8RIN.ImageToolboxLibs:tiffdecoder"
 toolbox-qoiCoder = { module = "com.github.T8RIN.ImageToolboxLibs:qoi-coder", version.ref = "imageToolboxLibs" }
 toolbox-awebp = { module = "com.github.T8RIN.ImageToolboxLibs:awebp", version.ref = "imageToolboxLibs" }
 toolbox-psd = { module = "com.github.T8RIN.ImageToolboxLibs:psd", version.ref = "imageToolboxLibs" }
+toolbox-avif = { module = "com.github.T8RIN.ImageToolboxLibs:avif", version.ref = "imageToolboxLibs" }
 
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
