--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,8 @@ aire = "0.13.12"
 jxlCoder = "2.3.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.0-rc01"
+composeVersion = "1.8.0-alpha01"
+materialIconsExtended = "1.7.0"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -42,19 +43,19 @@ gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.13.1"
-androidxLifecycle = "2.8.5"
-desugaring = "2.1.1"
-activityCompose = "1.9.2"
+androidxCore = "1.15.0-alpha02"
+androidxLifecycle = "2.9.0-alpha02"
+desugaring = "2.1.2"
+activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.2.0"
-material3 = "1.3.0-rc01"
+material3 = "1.3.0"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
-splashScreen = "1.2.0-alpha01"
+splashScreen = "1.2.0-alpha02"
 
 espresso = "3.6.1"
-ksp = "1.9.24-1.0.20"
+ksp = "1.9.25-1.0.20"
 
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
@@ -112,7 +113,7 @@ aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
 androidx-exifinterface = { module = "androidx.exifinterface:exifinterface", version.ref = "exifinterface" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 androidx-material3-window-sizeclass = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeVersion" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "composeVersion" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "appUpdateKtx" }
