--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ aire = "0.13.12"
 jxlCoder = "2.3.0"
 
 tesseract = "4.7.0"
-composeVersion = "1.8.0-alpha01"
+composeVersion = "1.7.0"
 materialIconsExtended = "1.7.0"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
@@ -37,22 +37,22 @@ detekt = "1.23.6"
 detektCompose = "0.4.11"
 
 kotlin = "1.9.25"
-agp = "8.5.2"
+agp = "8.6.0"
 hilt = "2.52"
 gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.15.0-alpha02"
-androidxLifecycle = "2.9.0-alpha02"
+androidxCore = "1.13.1"
+androidxLifecycle = "2.8.5"
 desugaring = "2.1.2"
-activityCompose = "1.10.0-alpha02"
+activityCompose = "1.9.2"
 kotlinxCollectionsImmutable = "0.3.7"
 scrollbar = "2.2.0"
 material3 = "1.3.0"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
-splashScreen = "1.2.0-alpha02"
+splashScreen = "1.2.0-alpha01"
 
 espresso = "3.6.1"
 ksp = "1.9.25-1.0.20"
