--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ImageResizer.Launcher"
+        android:theme="@style/Theme.ImageToolbox.Launcher"
         tools:replace="android:allowBackup, android:label"
         tools:targetApi="tiramisu">
 
@@ -265,7 +265,7 @@
             android:enabled="@bool/at_least_26"
             android:exported="true"
             android:launchMode="singleTask"
-            android:theme="@style/Theme.ImageResizer">
+            android:theme="@style/Theme.ImageToolbox">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.PICK" />
                 <action android:name="android.intent.action.GET_CONTENT" />
