--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ versionCode = "153"
 jvmTarget = "17"
 compose-compiler = "1.5.15"
 
-imageToolboxLibs = "2.6.4"
+imageToolboxLibs = "2.6.8"
 trickle = "1.1.2"
 
 avifCoder = "1.8.0"
@@ -64,7 +64,7 @@ uiautomator = "2.3.0"
 androidxMacroBenchmark = "1.3.0"
 quickie = "1.12.4"
 
-material = "1.13.0-alpha05"
+material = "1.13.0-alpha06"
 jsoup = "1.18.1"
 
 documentScanner = "1.3.7"
@@ -110,6 +110,7 @@ toolbox-psd = { module = "com.github.T8RIN.ImageToolboxLibs:psd", version.ref = 
 toolbox-djvuCoder = { module = "com.github.T8RIN.ImageToolboxLibs:djvu-coder", version.ref = "imageToolboxLibs" }
 toolbox-fastNoise = { module = "com.github.T8RIN.ImageToolboxLibs:fast-noise", version.ref = "imageToolboxLibs" }
 toolbox-collages = { module = "com.github.T8RIN.ImageToolboxLibs:collages", version.ref = "imageToolboxLibs" }
+toolbox-histogram = { module = "com.github.T8RIN.ImageToolboxLibs:histogram", version.ref = "imageToolboxLibs" }
 
 
 aire = { module = "com.github.awxkee:aire", version.ref = "aire" }
