--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 androidMinSdk = "21"
-androidTargetSdk = "34"
-androidCompileSdk = "34"
+androidTargetSdk = "35"
+androidCompileSdk = "35"
 
 versionName = "3.1.0-alpha02"
 versionCode = "153"
@@ -13,13 +13,15 @@ imageToolboxLibs = "2.7.2"
 trickle = "1.1.2"
 
 avifCoder = "1.8.0"
+avifCoderCoil = "1.8.0.1"
 aire = "0.13.13"
 jxlCoder = "2.3.0"
+jxlCoderCoil = "2.3.0.1"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.1"
-materialIconsExtended = "1.7.1"
+composeVersion = "1.7.2"
+materialIconsExtended = "1.7.2"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -38,22 +40,22 @@ detekt = "1.23.7"
 detektCompose = "0.4.12"
 
 kotlin = "1.9.25"
-agp = "8.6.0"
+agp = "8.6.1"
 hilt = "2.52"
 gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.13.1"
-androidxLifecycle = "2.8.5"
+androidxCore = "1.15.0-alpha02"
+androidxLifecycle = "2.9.0-alpha03"
 desugaring = "2.1.2"
-activityCompose = "1.9.2"
+activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 material3 = "1.3.0"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
-splashScreen = "1.2.0-alpha01"
+splashScreen = "1.2.0-alpha02"
 
 espresso = "3.6.1"
 ksp = "1.9.25-1.0.20"
@@ -61,7 +63,7 @@ ksp = "1.9.25-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.0"
+androidxMacroBenchmark = "1.3.1"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha06"
@@ -125,7 +127,7 @@ androidx-material3 = { module = "androidx.compose.material3:material3", version.
 app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "appUpdateKtx" }
 app-update = { module = "com.google.android.play:app-update", version.ref = "appUpdate" }
 avif-coder = { module = "com.github.awxkee:avif-coder", version.ref = "avifCoder" }
-avif-coder-coil = { module = "com.github.awxkee:avif-coder-coil", version.ref = "avifCoder" }
+avif-coder-coil = { module = "com.github.awxkee:avif-coder-coil", version.ref = "avifCoderCoil" }
 compose = { module = "com.github.zed-alpha.shadow-gadgets:compose", version.ref = "shadowGadgets" }
 datastore-preferences-android = { module = "androidx.datastore:datastore-preferences-android", version.ref = "androidx-datastorePreferencesAndroid" }
 fadingEdges = { module = "com.github.t8rin:ComposeFadingEdges", version.ref = "fadingEdges" }
@@ -141,7 +143,7 @@ coilGif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 coilSvg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "firebaseAnalyticsKtx" }
-jxl-coder-coil = { module = "io.github.awxkee:jxl-coder-coil", version.ref = "jxlCoder" }
+jxl-coder-coil = { module = "io.github.awxkee:jxl-coder-coil", version.ref = "jxlCoderCoil" }
 jxl-coder = { module = "io.github.awxkee:jxl-coder", version.ref = "jxlCoder" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
