Added Curve icon

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@
 # You should have received a copy of the Apache License
 # along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
 #
-org.gradle.jvmargs=-Xmx4g
+org.gradle.jvmargs=-Xmx8g
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
@@ -24,3 +24,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
 org.gradle.parallel=true
+kotlin.daemon.jvmargs=-Xmx8g
