--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
       - uses: actions/checkout@v3
       - name: set up JDK 17
         uses: actions/setup-java@v3
