--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,8 @@ androidMinSdk = "21"
 androidTargetSdk = "35"
 androidCompileSdk = "35"
 
-versionName = "3.1.0-alpha02"
-versionCode = "153"
+versionName = "3.1.0-beta01"
+versionCode = "154"
 
 jvmTarget = "17"
 compose-compiler = "1.5.15"
@@ -20,8 +20,8 @@ jxlCoderCoil = "2.3.0.1"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-composeVersion = "1.7.2"
-materialIconsExtended = "1.7.2"
+composeVersion = "1.8.0-alpha03"
+materialIconsExtended = "1.7.3"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -46,13 +46,13 @@ gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.15.0-alpha02"
-androidxLifecycle = "2.9.0-alpha03"
+androidxCore = "1.15.0-beta01"
+androidxLifecycle = "2.9.0-alpha04"
 desugaring = "2.1.2"
 activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
-material3 = "1.3.0"
+material3 = "1.4.0-alpha01"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha02"
@@ -63,7 +63,7 @@ ksp = "1.9.25-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.3.1"
+androidxMacroBenchmark = "1.4.0-alpha02"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha06"
