--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,8 @@ jxlCoderCoil = "2.3.0.1"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-composeVersion = "1.8.0-alpha03"
+material3 = "1.3.0"
+composeVersion = "1.7.3"
 materialIconsExtended = "1.7.3"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
@@ -52,7 +53,6 @@ desugaring = "2.1.2"
 activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
-material3 = "1.4.0-alpha01"
 reorderable = "0.9.6"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha02"
