--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -73,8 +73,10 @@ documentScanner = "1.3.7"
 mlkitDocumentScanner = "16.0.0-beta1"
 zxingAndroidEmbedded = "4.3.0"
 capturable = "3.0.0"
+moshi = "1.15.1"
 
 [libraries]
+moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 trickle = { module = "com.github.T8RIN:Trickle", version.ref = "trickle" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 mlkit-document-scanner = { module = "com.google.android.gms:play-services-mlkit-document-scanner", version.ref = "mlkitDocumentScanner" }
