Added ability to download lut library for 3D LUT filter

--- a/feature/recognize-text/src/main/AndroidManifest.xml
+++ b/feature/recognize-text/src/main/AndroidManifest.xml
@@ -15,7 +15,4 @@
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-</manifest>
+<manifest></manifest>
