--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ jvmTarget = "17"
 compose-compiler = "1.5.15"
 
 imageToolboxLibs = "2.9.6"
-trickle = "1.1.6"
+trickle = "1.1.8"
 
 avifCoder = "2.0.5"
 avifCoderCoil = "2.0.5"
@@ -20,9 +20,9 @@ jxlCoderCoil = "2.3.0.1"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-material3 = "1.3.0"
-composeVersion = "1.7.3"
-materialIconsExtended = "1.7.3"
+material3 = "1.4.0-alpha02"
+composeVersion = "1.8.0-alpha04"
+materialIconsExtended = "1.7.4"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -47,8 +47,8 @@ gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.15.0-beta01"
-androidxLifecycle = "2.9.0-alpha04"
+androidxCore = "1.15.0-rc01"
+androidxLifecycle = "2.9.0-alpha05"
 desugaring = "2.1.2"
 activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
@@ -63,7 +63,7 @@ ksp = "1.9.25-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha02"
+androidxMacroBenchmark = "1.4.0-alpha03"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha06"
