--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,7 +53,7 @@ desugaring = "2.1.2"
 activityCompose = "1.10.0-alpha02"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
-reorderable = "2.4.0-beta01"
+reorderable = "2.4.0"
 reviewKtx = "2.0.1"
 splashScreen = "1.2.0-alpha02"
 
