--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,9 +20,9 @@ jxlCoderCoil = "2.3.0.1"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-material3 = "1.4.0-alpha02"
-composeVersion = "1.8.0-alpha04"
-materialIconsExtended = "1.7.4"
+material3 = "1.4.0-alpha03"
+composeVersion = "1.8.0-alpha05"
+materialIconsExtended = "1.7.5"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
 appUpdate = "2.1.0"
@@ -47,10 +47,10 @@ gms = "4.4.2"
 
 coil = "2.7.0"
 appCompat = "1.7.0"
-androidxCore = "1.15.0-rc01"
-androidxLifecycle = "2.9.0-alpha05"
+androidxCore = "1.15.0"
+androidxLifecycle = "2.9.0-alpha06"
 desugaring = "2.1.2"
-activityCompose = "1.10.0-alpha02"
+activityCompose = "1.10.0-alpha03"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.0"
@@ -63,7 +63,7 @@ ksp = "1.9.25-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha03"
+androidxMacroBenchmark = "1.4.0-alpha04"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha07"
