--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,6 @@ shadowGadgets = "2.2.1"
 fadingEdges = "1.0.4"
 firebaseCrashlyticsKtx = "19.2.1"
 konfettiCompose = "2.0.4"
-reimagined = "1.5.0"
 shadowsPlus = "1.0.4"
 exifinterface = "1.3.7"
 firebaseAnalyticsKtx = "22.1.2"
@@ -39,6 +38,7 @@ google-segmentationSelfie = "16.0.0-beta6"
 google-subjectSegmentation = "16.0.0-beta1"
 detekt = "1.23.7"
 detektCompose = "0.4.17"
+decompose = "3.1.0"
 
 kotlin = "1.9.25"
 agp = "8.7.1"
@@ -137,8 +137,8 @@ datastore-preferences-android = { module = "androidx.datastore:datastore-prefere
 fadingEdges = { module = "com.github.t8rin:ComposeFadingEdges", version.ref = "fadingEdges" }
 firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx", version.ref = "firebaseCrashlyticsKtx" }
 konfetti-compose = { module = "nl.dionsegijn:konfetti-compose", version.ref = "konfettiCompose" }
-reimagined = { module = "dev.olshevski.navigation:reimagined", version.ref = "reimagined" }
-reimagined-hilt = { module = "dev.olshevski.navigation:reimagined-hilt", version.ref = "reimagined" }
+decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+decomposeExtensions = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 shadowsPlus = { module = "com.github.GIGAMOLE:ComposeShadowsPlus", version.ref = "shadowsPlus" }
 dagger-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugaring" }
