Added area scaling and improved saturation filter, also bump libs

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,14 +14,14 @@ trickle = "1.2.2"
 
 avifCoder = "2.0.8"
 avifCoderCoil = "2.0.8"
-aire = "0.15.3"
-jxlCoder = "2.3.0"
-jxlCoderCoil = "2.3.0.1"
+aire = "0.15.4"
+jxlCoder = "2.4.0"
+jxlCoderCoil = "2.4.0"
 jpegliCoder = "1.0.1"
 
 tesseract = "4.7.0"
-material3 = "1.4.0-alpha03"
-composeVersion = "1.8.0-alpha05"
+material3 = "1.4.0-alpha04"
+composeVersion = "1.8.0-alpha06"
 materialIconsExtended = "1.7.5"
 androidx-datastorePreferencesAndroid = "1.1.1"
 appUpdateKtx = "2.1.0"
@@ -31,7 +31,7 @@ fadingEdges = "1.0.4"
 firebaseCrashlyticsKtx = "19.2.1"
 konfettiCompose = "2.0.4"
 shadowsPlus = "1.0.4"
-exifinterface = "1.3.7"
+exifinterface = "1.4.0-alpha01"
 firebaseAnalyticsKtx = "22.1.2"
 firebaseCrashlyticsGradle = "3.0.2"
 google-segmentationSelfie = "16.0.0-beta6"
@@ -48,9 +48,9 @@ gms = "4.4.2"
 coil = "2.7.0"
 appCompat = "1.7.0"
 androidxCore = "1.15.0"
-androidxLifecycle = "2.9.0-alpha06"
+androidxLifecycle = "2.9.0-alpha07"
 desugaring = "2.1.3"
-activityCompose = "1.10.0-alpha03"
+activityCompose = "1.10.0-beta01"
 kotlinxCollectionsImmutable = "0.3.8"
 scrollbar = "2.2.0"
 reorderable = "2.4.0"
@@ -63,7 +63,7 @@ ksp = "1.9.25-1.0.20"
 androidx-test-ext-junit = "1.2.1"
 documentfile = "1.0.1"
 uiautomator = "2.3.0"
-androidxMacroBenchmark = "1.4.0-alpha04"
+androidxMacroBenchmark = "1.4.0-alpha05"
 quickie = "1.12.4"
 
 material = "1.13.0-alpha07"
